--- a/templates/etc/init.d/supervisor.j2
+++ b/templates/etc/init.d/supervisor.j2
@@ -1,5 +1,7 @@
 #! /bin/sh
 #
+# {{ ansible_managed }}
+#
 # Downloaded from:
 # http://bazaar.launchpad.net/~ubuntu-branches/ubuntu/trusty/supervisor/trusty/view/head:/debian/supervisor.init
 #
