--- a/templates/etc/supervisor/conf.d/program.conf.j2
+++ b/templates/etc/supervisor/conf.d/program.conf.j2
@@ -32,3 +32,9 @@ stderr_logfile_maxbytes={{ item.value.stderr_logfile_maxbytes }}
 {% if item.value.user is defined %}
 user={{ item.value.user }}
 {% endif %}
+{% if item.value.numprocs is defined %}
+numprocs={{ item.value.numprocs }}
+{% endif %}
+{% if item.value.process_name is defined %}
+process_name={{ item.value.process_name }}
+{% endif %}
