--- a/templates/etc/supervisor/conf.d/program.conf.j2
+++ b/templates/etc/supervisor/conf.d/program.conf.j2
@@ -9,10 +9,10 @@ directory={{ item.value.directory }}
 environment={{ item.value.environment }}
 {% endif %}
 {% if item.value.autostart is defined %}
-autostart={{ 'true' if item.value.autostart | bool else 'false' }}
+autostart={{ item.value.autostart | default(false) | bool | to_json }}
 {% endif %}
 {% if item.value.autorestart is defined %}
-autorestart={{ 'true' if item.value.autorestart | bool else 'false'}}
+autorestart={{ item.value.autorestart | default(false) | bool | to_json}}
 {% endif %}
 {% if item.value.startretries is defined %}
 startretries={{ item.value.startretries }}
@@ -50,8 +50,8 @@ stopsignal={{ item.value.stopsignal }}
 stopwaitsecs={{ item.value.stopwaitsecs }}
 {% endif %}
 {% if item.value.stopasgroup is defined %}
-stopasgroup={{ 'true' if item.value.stopasgroup | bool else 'false'}}
+stopasgroup={{ item.value.stopasgroup | default(false) | bool | to_json }}
 {% endif %}
 {% if item.value.killasgroup is defined %}
-killasgroup={{ 'true' if item.value.killasgroup | bool else 'false'}}
+killasgroup={{ item.value.killasgroup | default(false) | bool | to_json }}
 {% endif %}
